<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_weight="0"
                android:layout_gravity="center_vertical"
                android:id="@+id/poster"
                android:layout_width="154dp"
                android:layout_height="272dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/logan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.951"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.333">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.952"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/title_ua_film_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Logan"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/title_eng_film_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Logan"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/genres_film_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Logan"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/studios_film_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Logan"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/countries_film_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Logan"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/premiere_film_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/premiere_in_ua"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/premiere_ua_film_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Logan"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/time_film_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/film_time"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/duration_film_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Logan"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/rating_film_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/fim_rating_film_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Logan"
                        android:textSize="15sp" />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/descriptionCard"
        android:layout_width="330dp"
        android:layout_height="111dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736">

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:lineSpacingMultiplier="1"
            android:scrollbars="vertical"
            android:text="@string/logan_info"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="246dp" />
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/buyButton_film_info"
        android:background="@drawable/button_buy_shape"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/buy_tickets"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

</android.support.constraint.ConstraintLayout>